// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Textarea Snapshots Render textarea with 10 rows 1`] = `
<div>
  <textarea
    class="brz-ed-control__textarea2 brz-ed-control__textarea2--undefined"
    rows="10"
  >
    10 rows
  </textarea>
</div>
`;

exports[`Test Textarea Snapshots Render textarea with placeholder 'test' 1`] = `
<div>
  <textarea
    class="brz-ed-control__textarea2 brz-ed-control__textarea2--undefined"
    placeholder="test"
  />
</div>
`;

exports[`Test Textarea Snapshots Render textarea with value 'test' 1`] = `
<div>
  <textarea
    class="brz-ed-control__textarea2 brz-ed-control__textarea2--undefined"
  >
    test
  </textarea>
</div>
`;
